# cygnus-actors-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.claude/: settings.local.json
benchmarks/: size_check.cpp  throughput_benchmark.cpp
build-linux/: Makefile
build-release/: Makefile  benchmark
claude/: README.md  build.bat
claude/planning/: CLAUDE.md  TODO.md  ask_pattern_design.md  bug_message_sender.md  build_setup_paths.md  future_features_roadmap.md  session_summary_2025-10-24.md
claude/planning/archive/: message_dispatch_design.md
doc/: 100_advanced_actors.md  10_overview.md  120_best_practices.md  130_zeromq_relay.md  20_getting_started.md  40_message_passing.md  50_lifecycle_hooks.md  60_actor_registry.md  70_dynamic_removal.md  80_ask_pattern.md  90_timers.md  README.md
include/cas/: actor.h  actor_impl.h  actor_ref.h  actor_ref_impl.h  actor_registry.h  ask_message.h  cas.h  fast_actor.h  fixed_string.h  inline_actor.h  message_base.h  message_pool.h  stateful_actor.h  system.h  timer.h  timer_manager.h  zeromq_relay_actor.h
planning/: actor_identity_and_metrics_recovery.md  ask_pattern_implementation_status.md  automatic_handler_registration.md  automatic_message_handler_research.md  development_workflow_and_standards.md  dynamic_actor_removal.md  future_features_roadmap.md  identity_metrics_implementation_plan.md  lock_free_containers.md  lockfree_queue_integration_remaining.md  problem_solutions.md  stateful_actor_layout_bug.md  statis_reflections.md
source/: actor.cpp  actor_ref.cpp  actor_registry.cpp  fast_actor.cpp  message_pool.cpp  stateful_actor.cpp  system.cpp  timer_manager.cpp  zeromq_relay_actor.cpp
tests/: example_usage.cpp  main.cpp  standalone_timer_test.cpp  test_common.h  test_timer_manager_standalone.cpp
tests/00_basic/: test_actor_creation.cpp  test_actor_naming.cpp  test_registry_basics.cpp
tests/01_simple/: test_handler_registration.cpp  test_message_struct.cpp  test_single_message.cpp
tests/02_interactions/: test_ping_pong.cpp
tests/03_lifecycle/: test_lifecycle_hooks.cpp  test_message_draining.cpp
tests/04_advanced/: test_fast_actor.cpp  test_inline_actor.cpp  test_stateful_actor.cpp
tests/05_ask_pattern/: test_ask_basic.cpp  test_ask_timeout.cpp
tests/06_timers/: test_timer_basic.cpp  test_timer_lifecycle.cpp  test_timer_periodic.cpp
tests/07_dynamic_removal/: test_basic_removal.cpp
tests/08_zeromq_relay/: test_zeromq_relay.cpp
tests/09_fixed_types/: test_fixed_string.cpp
tests/10_dead_letters/: test_dead_letter_handling.cpp
